<resources>
    <string name="app_name">ShoppingMall</string>

    <!-- Tab Title -->
    <string name="home">主页</string>
    <string name="hot">热卖</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>

    <string name="title">商品详情</string>
    <string name="search_bar">请输入搜索内容</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>

    <string name="buy_now">立刻购买</string>
    <string name="rmb">￥</string>

    <string name="add_symbol">+</string>
    <string name="sub_symbol">-</string>

    <string name="select_all">全选</string>
    <string name="settle">去结算</string>
    <string name="total">合计</string>
    <string name="delete">删除</string>

    <string name="ware_list">商品列表</string>

    <string name="login">点击登陆</string>
    <string name="mine_orders">我的订单</string>
    <string name="mine_favorite">我的收藏</string>
    <string name="mine_address">收获地址</string>
    <string name="mine_message">我的消息</string>
    <string name="logout">退出登陆</string>

</resources>
