<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/mine_avatar_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/white"
            android:src="@drawable/default_head"/>

        <TextView
            android:id="@+id/mine_text_view"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/login"/>

    </LinearLayout>


    <TextView
        android:id="@+id/txt_my_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/largePadding"
        android:background="@drawable/selector_list_item"
        android:drawableStart="@drawable/icon_list_o"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:text="@string/mine_orders"
        android:textColor="@color/black"/>

    <View style="@style/line_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/largePadding"
        android:background="@drawable/selector_list_item"
        android:drawableStart="@drawable/icon_favorite"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:text="@string/mine_favorite"
        android:textColor="@color/black"/>

    <View style="@style/line_vertical"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/largePadding"
        android:background="@drawable/selector_list_item"
        android:drawableStart="@drawable/icon_location"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:text="@string/mine_address"
        android:textColor="@color/black"/>

    <View style="@style/line_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/largePadding"
        android:background="@drawable/selector_list_item"
        android:drawableStart="@drawable/icon_msg"
        android:gravity="center_vertical"
        android:drawablePadding="20dp"
        android:text="@string/mine_message"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_logout"
        android:text="@string/logout"
        style="@style/bigRedButton"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />

</LinearLayout>